# src/app.js
@@ -2,10 +2,14 @@ const express = require("express");
 const cors = require("cors");
 const bodyParser = require("body-parser");
 const documentRouter = require("./modules/apiDoc/swagger.routes");
-const authRouter = require("./modules/Auth/auth.routes")
-const usersRouter = require("./modules/Users/users.routes")
+const authRouter = require("./modules/Auth/auth.routes");
+const usersRouter = require("./modules/Users/users.routes");
+const categoriesRouter = require("./modules/Categories/categories.routes");
+const path = require("path")
 
 const app = express();
+
+app.use(express.static(path.join(__dirname, "public")));
 
 // Get req.body
 app.use(cors());
@@ -13,9 +17,10 @@ app.use(bodyParser.urlencoded({ extended: false }));
 app.use(bodyParser.json());
 
 // Routes
-app.use("/document" , documentRouter)
-app.use("/auth" , authRouter)
-app.use("/users" , usersRouter)
+app.use("/document", documentRouter);
+app.use("/auth", authRouter);
+app.use("/users", usersRouter);
+app.use("/categories", categoriesRouter);
 
 // Not-Found Page
 app.use((req, res) => {
